# python-project-template

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
